--- a/index.html
+++ b/index.html
@@ -4,6 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Apex National Bank</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: '#004a8c', // A deeper, refined blue for Apex National Bank
+            accent: {
+              DEFAULT: '#0d9488', // teal-600
+              '100': '#ccfbf1',   // teal-100
+              '700': '#0f766e'    // teal-700
+            },
+          },
+          boxShadow: {
+            'top': '0 -4px 6px -1px rgba(0, 0, 0, 0.1), 0 -2px 4px -1px rgba(0, 0, 0, 0.06)',
+          },
+          animation: {
+            'loading-bar': 'loading-bar-animation 1.5s infinite linear',
+          },
+          keyframes: {
+            'loading-bar-animation': {
+                '0%': { transform: 'translateX(-100%)' },
+                '100%': { transform: 'translateX(100%)' },
+            }
+          }
+        }
+      }
+    }
+  </script>
   <style>
     body { margin: 0; }
     #root { height: 100vh; background-color: #f9fafb; }
@@ -28,8 +57,12 @@
 <script type="importmap">
 {
   "imports": {
-    "vite": "https://esm.sh/vite@^7.0.4",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.6.0"
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "react-router-dom": "https://esm.sh/react-router-dom@6.22.3",
+    "@google/genai": "https://esm.sh/@google/genai@0.2.1",
+    "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
+    "react/": "https://esm.sh/react@^19.1.0/"
   }
 }
 </script>
@@ -37,6 +70,14 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script>
+    // Polyfill for process.env to avoid crashing in browser environments
+    // where it's not defined. The actual API key is expected to be
+    // injected by the execution environment.
+    if (typeof process === 'undefined') {
+      window.process = { env: { API_KEY: '' } };
+    }
+  </script>
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
